--- a/.github/workflows/raja.yml
+++ b/.github/workflows/raja.yml
@@ -14,7 +14,7 @@ jobs:
         port: ${{ secrets.PORT }}
         #token: ${{ secrets.GIT_TOKEN }}
         script: |
-          cd /tmp/github
+          cd /tmp/github/rajac123
           echo ${{ secrets.PASSWORD }} | sudo -S git checkout main
           echo ${{ secrets.PASSWORD }} | sudo -S git pull origin main
           #echo ${{ secrets.PASSWORD }} | sudo -S chmod +x /tmp/github/rajac123/codeUpdate.sh
