--- a/.github/workflows/raja.yml
+++ b/.github/workflows/raja.yml
@@ -1,21 +1,21 @@
-name: CICD
-on: [ push ]
-jobs:
-  Deploy:
-    name: Deploy
-    runs-on: ubuntu-latest
-    steps:
-    - name: executing remote ssh commands using password
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
-        port: ${{ secrets.PORT }}
-        #token: ${{ secrets.GIT_TOKEN }}
-        script: |
-          cd /tmp/github/rajac123
-          echo ${{ secrets.PASSWORD }} | sudo -S git checkout main
-          echo ${{ secrets.PASSWORD }} | sudo -S git pull origin main
-          echo ${{ secrets.PASSWORD }} | sudo -S chmod +x /tmp/github/rajac123/codeUpdate.sh
-          echo ${{ secrets.PASSWORD }} | sudo -S /tmp/github/rajac123/codeUpdate.sh
+# name: CICD
+# on: [ push ]
+# jobs:
+#   Deploy:
+#     name: Deploy
+#     runs-on: ubuntu-latest
+#     steps:
+#     - name: executing remote ssh commands using password
+#       uses: appleboy/ssh-action@master
+#       with:
+#         host: ${{ secrets.HOST }}
+#         username: ${{ secrets.USERNAME }}
+#         password: ${{ secrets.PASSWORD }}
+#         port: ${{ secrets.PORT }}
+#         #token: ${{ secrets.GIT_TOKEN }}
+#         script: |
+#           cd /tmp/github/rajac123
+#           echo ${{ secrets.PASSWORD }} | sudo -S git checkout main
+#           echo ${{ secrets.PASSWORD }} | sudo -S git pull origin main
+#           echo ${{ secrets.PASSWORD }} | sudo -S chmod +x /tmp/github/rajac123/codeUpdate.sh
+#           echo ${{ secrets.PASSWORD }} | sudo -S /tmp/github/rajac123/codeUpdate.sh
